lots of changes

--- a/lib/gaminvest_web/live/home/home_live.html.leex
+++ b/lib/gaminvest_web/live/home/home_live.html.leex
@@ -3,4 +3,13 @@
     <%= money_format(@human.savings.amount) %>
 </div>
 
+<h2>Rendimento projetado</h2>
+<p><%= money_format(0.24 * @human.savings.amount) %> a.m.</p>
+
+<h2>Percentual de rendimento</h2>
+<p>0,24% a.m.</p>
+
+
+<canvas id="home-chart" width="1000" height="500" phx-hook="HomeChart" data-savings="<%= Jason.encode! [1002.40,1004.80,1007.20,1009.60,1012.00,1014.40,1016.80,1019.20,1021.60,1024.00] %>"></canvas>
+
 <%= live_component @socket, GaminvestWeb.NavComponent %>
