--- a/lib/gaminvest_web/templates/layout/root.html.eex
+++ b/lib/gaminvest_web/templates/layout/root.html.eex
@@ -7,6 +7,7 @@
     <%= csrf_meta_tag() %>
     <title>Gaminvest</title>
     <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
     <script defer type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
   </head>
   <body>
@@ -15,4 +16,3 @@
     </main>
   </body>
 </html>
-
