--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -4,7 +4,9 @@
 
 /* Alerts and form errors */
 .navbar {
+  margin-top: 200px;
   margin-bottom: 10px;
+  box-shadow:  0px 0px 25px rgba(0, 0, 0, 0.15);
 }
 
 .navbar ul {
@@ -12,7 +14,7 @@
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #606c76;
+    background-color: #FDFDFD;
 }
 
 .navbar li {
@@ -26,15 +28,18 @@
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-}
-
-.navbar li a:hover {
-    background-color: #ab5dda;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 18px;
+    font-weight: bold;
 }
 
 .money {
   font-family: 'Montserrat', sans-serif;
-  color: green
+  color: #30AB70;
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 44px;
+  position: absolute;
 }
 
 .alert {
@@ -63,4 +68,23 @@
 }
 .alert:empty {
   display: none;
+}
+
+h1 {
+  text-align: center;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bold;
+}
+p { 
+  font-family: 'Montserrat', sans-serif;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+i {
+  color: #9D9EA1;
+}
+
+i:active {
+  color: #222648;
 }
