--- a/lib/gaminvest_web/templates/layout/root.html.eex
+++ b/lib/gaminvest_web/templates/layout/root.html.eex
@@ -7,13 +7,11 @@
     <%= csrf_meta_tag() %>
     <title>Gaminvest</title>
     <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
     <script defer type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
   </head>
   <body>
-    <main role="main" class="container">
-        <%= @inner_content %>
-    </main>
+      <%= @inner_content %>
   </body>
 </html>
