--- a/lib/gaminvest_web/live/challenges/challenge_live.html.leex
+++ b/lib/gaminvest_web/live/challenges/challenge_live.html.leex
@@ -1,3 +1,25 @@
 <div class="card">
-    <h2></h2>
+    <div class="card-header">
+        <h2><%= @daily_challenge.title %></h2>
+    </div>
+    <div class="card-body">
+        <%= raw @daily_challenge.content %>
+    </div>
 </div>
+
+<table>
+    <thead>
+        <tr>
+            <th>User ID</th>
+            <th>Pontuação</th>
+        </tr>
+    </thead>
+    <tbody>
+    <%= for {user_id, %{metas: [%{points: points, name: name}]}} <- @leaderboard_list do %>
+        <tr id="<%= user_id %>">
+            <td><%= name %></td>
+            <td><%= points %></td>
+        </tr>
+    <% end %>
+    <tbody>
+</table>
