--- a/lib/gaminvest_web/live/modules/module_live.html.leex
+++ b/lib/gaminvest_web/live/modules/module_live.html.leex
@@ -25,4 +25,62 @@
             Continuar
         </div> 
     </div>
+
+    <div class="modules-page__item module module--locked">
+
+        <div class="module__header">
+            <div class="module__title">
+                Tipos de investimento
+            </div>
+
+            <div class="module__score score-minimal score-minimal--locked">
+                <div class="score-minimal__amount">
+                    1250
+                </div>
+                <div class="score-minimal__label">
+                    Pontos
+                </div>
+            </div>
+        </div>
+
+        <div class="module__description">
+            Nesse módulo você irá descobrir os diferentes tipos de investimento que existem.
+        </div>
+
+        <div class="module__button button module__button--locked">
+            Bloqueado
+        </div>
+        <div class="module__disclaimer module__disclaimer--visible">
+            Desbloqueie terminando o módulo anterior
+        </div>
+    </div>
+
+    <div class="modules-page__item module module--locked">
+
+        <div class="module__header">
+            <div class="module__title">
+                Tipos de investimento
+            </div>
+
+            <div class="module__score score-minimal score-minimal--locked">
+                <div class="score-minimal__amount">
+                    1250
+                </div>
+                <div class="score-minimal__label">
+                    Pontos
+                </div>
+            </div>
+        </div>
+
+        <div class="module__description">
+            Nesse módulo você irá descobrir os diferentes tipos de investimento que existem.
+        </div>
+
+        <div class="module__button button module__button--locked">
+            Bloqueado
+        </div>
+        <div class="module__disclaimer module__disclaimer--visible">
+            Desbloqueie terminando o módulo anterior
+        </div>
+    </div>
 </div>
