--- a/lib/gaminvest_web/live/profile/profile_live.html.leex
+++ b/lib/gaminvest_web/live/profile/profile_live.html.leex
@@ -36,7 +36,7 @@
                 </div>
 
                 <div class="user-progress__value">
-                    1/10
+                    0/10
                 </div>
             </div>
 
@@ -46,7 +46,7 @@
                 </div>
 
                 <div class="user-progress__value">
-                    <%= money_format(@human.savings.amount) %>
+                    <%= money_format(0.0) %>
                 </div>
             </div>
         </div>
