--- a/assets/css/components/layout.scss
+++ b/assets/css/components/layout.scss
@@ -1,24 +1,24 @@
 .layout {
-    height: 100vh;
-    display: grid;
-    grid-template-rows: 80px auto 80px;
-    grid-template-columns: minmax(24px, auto) minmax(414px, 1366px) minmax(24px, auto);;
+  height: 100vh;
+  display: grid;
+  grid-template-rows: 80px auto 80px;
+  grid-template-columns: minmax(24px, auto) minmax(414px, 1366px) minmax(24px, auto);
 
-    grid-template-areas:
-      "header header header"
-      ". main ."
-      "navbar navbar navbar";
-  
-    &__header {
-      grid-area: header;
-    }
-  
-    &__navbar {
-      grid-area: navbar;
-    }
-  
-    &__main {
-      grid-area: main;
-      overflow-y: auto;
-    }
+  grid-template-areas:
+    "header header header"
+    ". main ."
+    "navbar navbar navbar";
+
+  &__header {
+    grid-area: header;
   }
+
+  &__navbar {
+    grid-area: navbar;
+  }
+
+  &__main {
+    grid-area: main;
+    overflow-y: auto;
+  }
+}
