--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -690,20 +690,25 @@
 }
 
 .module-page {
+  height: 100%;
   display: flex;
-  margin-bottom: 16px;
+  overflow: hidden;
   flex-direction: column;
 
   &__content {
+    flex: 1;
     font-size: 14px;
     font-weight: 400;
     color: #222648;
     line-height: 1.5em;
+    overflow-y: scroll;
     font-family: "Source Sans Pro", sans-serif;
   }
 
   &__actions {
+    flex: 0;
     margin-top: 32px;
+    margin-bottom: 32px;
     justify-content: space-evenly;
   }
 }
